--- a/src/components/Booking/booking.css
+++ b/src/components/Booking/booking.css
@@ -80,3 +80,11 @@
     font-weight: 700 !important;
     font-size: 1.1rem !important;
 }
+
+@media only screen and (max-width: 768px) {
+  .booking {
+    position: static;
+    width: 100%;
+    margin-top: 2rem;
+  }
+}
