--- a/src/shared/search-bar.css
+++ b/src/shared/search-bar.css
@@ -38,3 +38,25 @@
     border-radius: 10px 5px 10px 5px;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 767px) {
+  .search__bar {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .form__group {
+    width: 100% !important;
+    flex-direction: column;
+    gap: 0.5rem;
+    border-right: none !important;
+    border-bottom: 1px solid var(--secondary-color);
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .search__bar .form__group:last-child {
+    border-bottom: none;
+  }
+}
+
